--- a/PDF-server1/package.json
+++ b/PDF-server1/package.json
@@ -11,6 +11,7 @@
   },
   "keywords": [],
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "node-forge": "^1.3.1",
